Fri Nov  3 18:12:36 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Unload_libACE.cpp (main): Reverted the ACE_OS::exit() from
          this since it's not supposed to be an ACE test.  Thanks to Simon
          Massey for reporting this.

Fri Nov 03 15:52:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:

          Bugfix in cmdline composition.

Fri Nov  3 15:15:43 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          Scoreboard cleanup.

Fri Nov 03 10:54:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_sys_time.inl:

          Fixed conversion warning on OpenVMS.

Fri Nov  3 00:39:04 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          One more optimization, this one to combine the methods for
          evaluating the IPv6 or IPv4 enabled status.

Fri Nov  3 00:32:27 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Select_Reactor_Base.inl:
        * ace/Select_Reactor_Base.cpp:
          Additional optimization for finding and unbinding event
          handlers. The solution moves the test for handles in range into
          the top-level find and unbind methods to allow the fix for bug
          2653 to continue to work in unbind while avoiding a double check
          for handles in range during a find.

Thu Nov  2 20:33:55 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/SOCK_Test_IPv6.cpp (spawn):
        * tests/Pipe_Test.cpp (run_main):
        * tests/SPIPE_Test.cpp (client):
        * tests/TkReactor_Test.cpp (run_main):
        * tests/MT_SOCK_Test.cpp (spawn):
        * tests/Process_Strategy_Test.cpp (run_main):
        * tests/Unload_libACE.cpp (main):
        * tests/SOCK_Test.cpp (spawn):
        * tests/Priority_Reactor_Test.cpp (run_main):
        * tests/SOCK_Dgram_Test.cpp (spawn):
        * tests/SOCK_SEQPACK_SCTP_Test.cpp (spawn_test):