@@ -1,3 +1,8 @@
+Sat Nov  4 12:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* ace/config-sunos4*.h:
+	  Removed these files, these are ancient and not supported anymore
+
 Fri Nov  3 18:12:36 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * tests/Unload_libACE.cpp (main): Reverted the ACE_OS::exit() from
